@@ -1,7 +1,7 @@
 package ti4.executors;
 
+import java.time.Duration;
 import java.util.Set;
-import java.util.concurrent.CancellationException;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
@@ -19,18 +19,28 @@ import ti4.message.MessageHelper;
 @UtilityClass
 public class ExecutorManager {
 
-    private static final ExecutorService EXECUTOR_SERVICE = Executors.newFixedThreadPool(Math.max(2, Runtime.getRuntime().availableProcessors()));
+    private static final int TASK_TIMEOUT_SECONDS = 30;
+    private static final int SHUTDOWN_TIMEOUT_SECONDS = 20;
+    private static final ExecutorService EXECUTOR_SERVICE = Executors.newVirtualThreadPerTaskExecutor();
     private static final Set<String> executionLocks = ConcurrentHashMap.newKeySet();
 
     public static void runAsync(String name, String gameName, MessageChannel messageChannel, Runnable runnable) {
-        if (canExecuteGameCommand(gameName, messageChannel)) {
-            Runnable onCancel = () -> {
-                MessageHelper.sendMessageToChannel(messageChannel, "The last command timed out and was cancelled. Double check the map state " +
-                    "and use undo if the command partially completed.");
-                executionLocks.remove(gameName);
-            };
-            runAsync(name, wrapWithLockRelease(gameName, runnable), onCancel);
+        if (CircuitBreaker.isOpen()) {
+            Duration durationUntilCircuitCloses = CircuitBreaker.getDurationUtilClose();
+            MessageHelper.sendMessageToChannel(messageChannel, "The bot is taking a breather. Try again in " +
+                durationUntilCircuitCloses.toMinutes() + " minutes and " + durationUntilCircuitCloses.getSeconds() % 60 + " seconds.");
+            return;
         }
+        if (!canExecuteGameCommand(gameName, messageChannel)) {
+            return;
+        }
+        Runnable onTimeout = () -> {
+            MessageHelper.sendMessageToChannel(messageChannel, "The last command timed out. Wait a few minutes and double check the map state.");
+            executionLocks.remove(gameName);
+        };
+        var lockReleaseRunnable = wrapWithLockRelease(gameName, runnable);
+        var timedRunnable = new TimedRunnable(name, lockReleaseRunnable);
+        runAsync(name, timedRunnable, onTimeout);
     }
 
     private static boolean canExecuteGameCommand(String gameName, MessageChannel messageChannel) {
@@ -52,7 +62,7 @@ public class ExecutorManager {
     }
 
     public static void runAsyncIfNotRunning(String name, Runnable runnable) {
-        if (!executionLocks.add(name)) {
+        if (CircuitBreaker.isOpen() || !executionLocks.add(name)) {
             return;
         }
         runAsync(name, wrapWithLockRelease(name, runnable));
@@ -60,11 +70,17 @@ public class ExecutorManager {
 
 
     public static void runAsync(String name, Runnable runnable) {
+        if (CircuitBreaker.isOpen()) {
+            return;
+        }
         var timedRunnable = new TimedRunnable(name, runnable);
         runAsync(name, timedRunnable);
     }
 
     public static void runAsync(String name, int executionTimeWarningThresholdSeconds, Runnable runnable) {
+        if (CircuitBreaker.isOpen()) {
+            return;
+        }
         var timedRunnable = new TimedRunnable(name, executionTimeWarningThresholdSeconds, runnable);
         runAsync(name, timedRunnable);
     }
@@ -73,19 +89,19 @@ public class ExecutorManager {
         runAsync(name, runnable, null);
     }
 
-    private static void runAsync(String name, Runnable runnable, Runnable onCancel) {
-        var timedRunnable = new TimedRunnable(name, runnable);
-        CompletableFuture
-            .runAsync(timedRunnable, EXECUTOR_SERVICE)
-            .orTimeout(30, TimeUnit.SECONDS)
+    private static void runAsync(String name, TimedRunnable runnable, Runnable onTimeout) {
+        CompletableFuture.runAsync(runnable, EXECUTOR_SERVICE)
+            .orTimeout(TASK_TIMEOUT_SECONDS, TimeUnit.SECONDS)
             .whenComplete((result, exception) -> {
-                if (exception instanceof TimeoutException || exception instanceof CancellationException) {
-                    BotLogger.error("Timed out while waiting for async task to finish. Canceled. Task name: " + name, exception);
-                    if (onCancel != null) {
-                        onCancel.run();
+                // This does not cancel the task, just reports that it exceeded the timeout threshold
+                if (exception instanceof TimeoutException) {
+                    CircuitBreaker.incrementThresholdCount();
+                    BotLogger.error("Timeout occurred during task: " + name, exception);
+                    if (onTimeout != null) {
+                        onTimeout.run();
                     }
                 } else if (exception != null) {
-                    BotLogger.error("Async task finished with an error. Task name: " + name, exception);
+                    BotLogger.error("Error occurred during task: " + name, exception);
                 }
             });
     }
@@ -93,7 +109,7 @@ public class ExecutorManager {
     public static boolean shutdown() {
         EXECUTOR_SERVICE.shutdown();
         try {
-            if (!EXECUTOR_SERVICE.awaitTermination(20, TimeUnit.SECONDS)) {
+            if (!EXECUTOR_SERVICE.awaitTermination(SHUTDOWN_TIMEOUT_SECONDS, TimeUnit.SECONDS)) {
                 EXECUTOR_SERVICE.shutdownNow();
                 return false;
             }
